add role and env

--- a/src/resources/scss/pages/_dashboard_writter.scss
+++ b/src/resources/scss/pages/_dashboard_writter.scss
@@ -14,7 +14,7 @@ td {
   font-size: 1.8rem;
 }
 td {
-  vertical-align: center; 
+  vertical-align: middle !important; 
   word-wrap: break-word;
 }
 
