--- a/src/resources/views/guest/article.hbs
+++ b/src/resources/views/guest/article.hbs
@@ -1,4 +1,4 @@
-{{!-- <div class="container">
+<div class="container">
   <div class="row">
     <div class="col-9">
       <div class="article-container">
@@ -43,11 +43,11 @@
                 {{this.created_at}}</p>
               <div class="d-flex align-items-center">
                 <img
-                  src="https://th.bing.com/th/id/OIP.GeISNKc1rg7SZlcK7GZ7aQHaEK?w=292&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
+                  src="{{this.author_id.image}}"
                   class="rounded-circle mr-2"
                   alt="Profile Picture"
                 />
-                <p class="mb-0">Author Name</p>
+                <p class="mb-0">{{this.author_id.username}}</p>
               </div>
             </div>
           </div>
@@ -55,4 +55,4 @@
       {{/each}}
     </div>
   </div>
-</div> --}}
+</div>
