--- a/src/resources/views/partials/header_guest_subscriber.hbs
+++ b/src/resources/views/partials/header_guest_subscriber.hbs
@@ -53,8 +53,8 @@
                 </div>
                 <div class="col-xl-2 col-lg-12 col-sm-12 d-flex justify-content-center mt-3">
                         <div class="action">
-                            <a href="#!" class="action__auth action__signup">Sign Up</a>
-                            <a href="#!" class="action__auth action__signin">Login</a>
+                            {{!-- <a href="/auth/register" class="action__auth action__signup">Sign Up</a> --}}
+                            <a href="/auth/register" class="action__auth action__signin">Login</a>
                         </div>
                 </div>
             </div>
