--- a/src/resources/views/writer/edit_article.hbs
+++ b/src/resources/views/writer/edit_article.hbs
@@ -34,7 +34,7 @@
       >{{article.summary}}</textarea>
     </div>
 
-    <!-- Thể loại -->
+    {{!-- <!-- Thể loại -->
     <div class="form-group">
       <label for="category_id">Category</label>
       <select id="category_id" name="category_id" class="form-control">
@@ -45,7 +45,7 @@
           <option value="{{this._id}}">{{this.name}}</option>
         {{/each}}
       </select>
-    </div>
+    </div> --}}
 
     <!-- Hình ảnh -->
     <div class="form-group">
