--- a/src/resources/views/writer/writer_dashboard.hbs
+++ b/src/resources/views/writer/writer_dashboard.hbs
@@ -5,7 +5,7 @@
   <!-- Nút thêm bài viết -->
   <div class="action_btn">
     <div class="back-btn-container">
-      <a href="/" class="btn btn-back">Back</a>
+      <a href="/logined" class="btn btn-back">Back</a>
     </div>
     <div class="add-btn-container">
       <a href="/writer/write-article" class="btn btn-add">Add article</a>
@@ -47,7 +47,7 @@
                   {{#if category_id.name}}{{category_id.name}}{{else}}No
                     category name{{/if}}
                 {{else}}
-                  <h2 style="color :red">Rejected</h2>
+                  <h2 style="color :red">Not attached yet</h2>
                 {{/if}}
               </td>
               <td>
