--- a/src/public/assets/css/main.css
+++ b/src/public/assets/css/main.css
@@ -2135,6 +2135,12 @@ html {
   overflow-y: auto;
 }
 
+.card-img {
+  width: 50%;
+  height: calc(width / 2);
+  padding: 10px;
+}
+
 /* Bảng */
 table {
   width: 100%;
@@ -2152,7 +2158,7 @@ td {
 }
 
 td {
-  vertical-align: center;
+  vertical-align: middle !important;
   word-wrap: break-word;
 }
 
@@ -2432,7 +2438,6 @@ label {
 .form-control,
 .form-control-file,
 .form-control select {
-  padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 1.6rem;
@@ -2817,6 +2822,12 @@ charts {
   box-shadow: 0 0 4px 2px rgba(0, 123, 255, 0.5);
 }
 
+.modal-dialog {
+  position: relative;
+  top: 135px;
+  left: 30px;
+}
+
 .top-act {
   white-space: nowrap;
   margin-left: 60px;
@@ -3007,6 +3018,611 @@ charts {
 }
 .user-menu__separate {
   border-top: 1px solid var(--separate-color);
+}
+
+.article-container {
+  font-family: "Arial", sans-serif;
+  line-height: 1.6;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  background-color: #fff;
+}
+
+.article-header {
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: center;
+  color: #333;
+}
+
+.article-metadata {
+  font-size: 14px;
+  color: #777;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.article-summary {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  padding: 15px;
+}
+.article-summary h2 {
+  text-align: center;
+  font-size: 2rem;
+}
+
+.article-summary p {
+  font-size: 15px;
+  color: #555;
+  margin: 10px 0;
+}
+
+.article-image img {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.article-content {
+  padding: 15px;
+  font-size: 16px;
+  color: #444;
+}
+.article-content h2 {
+  font-size: 2rem;
+  text-align: center;
+}
+
+.article-content h2 {
+  font-size: 20px;
+  margin-top: 20px;
+  color: #222;
+}
+
+.article-content p {
+  margin: 10px 0;
+}
+
+.profile {
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 33px;
+}
+.profile-content {
+  margin-top: 30px;
+}
+.profile__sidebar {
+  border-radius: 20px;
+  background: var(--profile-sidebar-bg);
+  box-shadow: 0px 20px 60px 10px var(--profile-sidebar-shadow);
+  overflow: hidden;
+  padding-bottom: 30px;
+}
+.profile-user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient(180deg, rgba(26, 22, 46, 0) 0%, #1a162e 100%), url(/assets/img/logo/rises.png) no-repeat center/cover;
+  padding: 40px 20px 20px;
+  box-shadow: 0px 20px 60px 10px var(--profile-sidebar-shadow);
+}
+.profile-user__avatar {
+  width: 121px;
+  height: 121px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0px 4px 14px 2px rgba(0, 0, 0, 0.08);
+  border: 5px solid rgba(255, 255, 255, 0.2);
+  background: #ccc;
+  background-clip: content-box;
+}
+.profile-user__name {
+  color: #fff;
+  margin-top: 15px;
+  font-size: 1.8rem;
+  font-weight: 700;
+  line-height: 1.44;
+}
+.profile-user__desc {
+  color: #fafafd;
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.46;
+  margin-top: 2px;
+  text-align: center;
+}
+.profile-menu {
+  margin-top: 30px;
+  padding: 0 30px;
+}
+.profile-menu__span {
+  color: red;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-left: 5px;
+}
+.profile-menu__title {
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 1.44;
+}
+.profile-menu__list {
+  margin-top: 12px;
+}
+.profile-menu__link {
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 1.46;
+  height: 33px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 0 5px;
+  margin-left: -5px;
+  border-radius: 5px;
+}
+.profile-menu__link:hover {
+  background-color: var(--profile-link-hover);
+  transition: background-color 0.2s;
+}
+.profile-menu__icon {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.profile__desc {
+  margin-bottom: 16px;
+}
+.profile__edit {
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+  position: relative;
+  top: -35px;
+  left: 20px;
+  z-index: 999;
+  filter: brightness(0) saturate(100%) invert(23%) sepia(71%) saturate(7406%) hue-rotate(356deg) brightness(99%) contrast(127%);
+}
+
+.account-info {
+  padding: 10px;
+  border-radius: 10px;
+  background: var(--account-info-bg);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.account-info__icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 54px;
+  height: 54px;
+  background-color: var(--account-info-icon-bg);
+  border-radius: 8px;
+  flex-shrink: 0;
+}
+.account-info__title {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.46;
+}
+.account-info__desc {
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.45;
+  margin-top: 6px;
+}
+
+.form:has(:invalid) .form__submit-btn {
+  pointer-events: none;
+  opacity: 0.5;
+}
+.form__group {
+  margin-top: 30px;
+}
+@media (max-width: 767.98px) {
+  .form__group {
+    margin-top: 20px;
+  }
+}
+.form__group--inline {
+  display: flex;
+  align-items: flex-start;
+}
+.form__group-term {
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+.form__group:has(:invalid):has(.form__input:not(:placeholder-shown)) .form__text-input {
+  border-color: red;
+  background-color: rgba(255, 0, 0, 0.1);
+}
+.form__group:has(:invalid):has(.form__input:not(:placeholder-shown)) .form__error,
+.form__group:has(:invalid):has(.form__input:not(:placeholder-shown)) .form__input-icon--error {
+  display: block;
+  visibility: visible;
+  filter: brightness(0) saturate(100%) invert(34%) sepia(73%) saturate(4164%) hue-rotate(338deg) brightness(98%) contrast(107%);
+}
+.form__group:has(:invalid):has(.form__input:not(:placeholder-shown)) .form__input-icon {
+  display: none;
+}
+.form__group:has(:invalid):has(.form__input:not(:placeholder-shown)) .form__input-icon--error {
+  margin-left: 12px;
+}
+.form__text-area {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  padding: 12px;
+  border: 1px solid #d2d1d6;
+  font-size: 1.8rem;
+}
+.form__text-area:focus-within {
+  border-color: #77dae6;
+}
+.form__text-area-input {
+  width: 100%;
+  resize: none;
+}
+.form__text-area-input::placeholder {
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+.form__text-input {
+  position: relative;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  height: 50px;
+  padding: 12px;
+  border: 1px solid #d2d1d6;
+}
+.form__text-input:focus-within {
+  border-color: #77dae6;
+}
+@media (max-width: 767.98px) {
+  .form__text-input {
+    height: 48px;
+  }
+}
+.form__input {
+  background-color: transparent !important;
+  height: 100%;
+  flex: 1;
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 1.44;
+  outline: none;
+  width: 100%;
+  color: var(--auto-fill-color) !important;
+}
+.form__input:autofill {
+  -webkit-text-fill-color: var(--auto-fill-color);
+  background-color: transparent !important;
+  -webkit-box-shadow: 0 0 0px 1000px var(--auto-fill) inset;
+  box-shadow: 0 0 0px 1000px var(--auto-fill) inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+.form__input-icon {
+  margin-left: 12px;
+}
+.form__input-icon--error {
+  width: 24px;
+  display: none;
+  animation: shake 0.8s;
+}
+@media (max-width: 767.98px) {
+  .form__input {
+    font-size: 1.6rem;
+  }
+}
+.form__input:not(:placeholder-shown) ~ .form__holder {
+  translate: 0 -25px;
+  color: red;
+}
+.form__input:focus + .form__holder, .form__input:not(:placeholder-shown) + .form__holder {
+  translate: 0 -28px;
+  font-size: 1.5rem;
+  color: rgba(158, 157, 168, 0.5);
+}
+.form__pull-right {
+  margin-left: auto;
+  display: flex;
+  flex-shrink: 0;
+}
+.form__checkbox {
+  user-select: none;
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+}
+.form__checkbox-label {
+  color: #9e9da8;
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.46;
+  margin-left: 29px;
+  text-align: start;
+}
+@media (max-width: 767.98px) {
+  .form__checkbox-label {
+    font-size: 1.4rem;
+  }
+}
+.form__checkbox::before, .form__checkbox::after {
+  position: absolute;
+  content: "";
+}
+.form__checkbox::before {
+  width: 19px;
+  height: 19px;
+  border-radius: 5px;
+  border: 1px solid #9e9da8;
+  top: 5px;
+}
+.form__checkbox:has(:checked)::before {
+  background-color: #ffb700;
+  border-color: #ffb700;
+}
+.form__checkbox:has(:checked)::after {
+  width: 15px;
+  height: 8px;
+  border: 3px solid;
+  border-color: transparent transparent #fff #fff;
+  rotate: -45deg;
+  left: 2px;
+  top: 8px;
+}
+.form__error {
+  color: red;
+  text-align: left;
+  font-size: 1.4rem;
+  font-weight: 500;
+  margin-top: 10px;
+  visibility: hidden;
+}
+.form__label {
+  color: var(--filter-form-label-color);
+  font-size: 2.2rem;
+  font-weight: 500;
+  line-height: 1.45;
+}
+.form__label--small {
+  display: inline-block;
+  margin-bottom: 10px;
+  font-size: 1.4rem;
+  line-height: 1.42;
+}
+.form__label--medium {
+  font-size: 1.8rem;
+  margin-bottom: 20px;
+  display: inline-block;
+}
+.form__select-wrap {
+  border-radius: 6px;
+  border: 1px solid #d2d1d6;
+  height: 45px;
+  display: flex;
+  align-items: center;
+}
+.form__select {
+  color: var(--filter-form-select-color);
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.42;
+  padding: 0 14px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-width: var(--width, 108px);
+  height: calc(100% - 10px);
+  cursor: pointer;
+}
+@media (max-width: 1199.98px) {
+  .form__select {
+    flex: 1;
+  }
+}
+.form__select + .form__select {
+  border-left: 1px solid #d2d1d6;
+}
+.form__tags {
+  display: flex;
+  gap: 10px 20px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+@media (max-width: 575.98px) {
+  .form__tags {
+    gap: 10px;
+  }
+}
+.form__tag {
+  border-radius: 6px;
+  background: var(--form-tag-bg);
+  color: #9e9da8;
+  padding: 6px 12px;
+  transition: color 0.25s;
+}
+.form__tag:hover {
+  color: var(--text-color);
+}
+.form__row {
+  display: flex;
+  gap: 30px;
+}
+@media (max-width: 767.98px) {
+  .form__row {
+    gap: 20px;
+  }
+}
+@media (max-width: 575.98px) {
+  .form__row {
+    flex-direction: column;
+    gap: 0;
+  }
+}
+.form__row > * {
+  flex: 1;
+}
+.form__select-dialog {
+  position: absolute;
+  background-color: var(--modal-bg);
+  bottom: 50px;
+  left: 0px;
+  max-height: 310px;
+  border: 1px solid #d2d1d6;
+  border-radius: 10px;
+  padding: 10px 0 10px;
+  display: flex;
+  flex-direction: column;
+  min-width: 230px;
+  opacity: 0;
+  visibility: hidden;
+  translate: 0 8px;
+  transition: opacity visibility translate;
+  transition-duration: 0.3s;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+}
+.form__select-dialog.show {
+  translate: 0;
+  opacity: 1;
+  visibility: visible;
+}
+@media (max-width: 575.98px) {
+  .form__select-dialog {
+    position: fixed;
+    max-height: initial;
+    inset: 0;
+    z-index: 1;
+    overflow: auto;
+  }
+}
+.form__search {
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  padding: 5px 20px 10px;
+  border-bottom: 1px solid #d2d1d6;
+  height: 38px;
+}
+.form__search-icon {
+  width: 19px;
+  margin-left: 10px;
+}
+@media (max-width: 575.98px) {
+  .form__search-icon {
+    margin-left: 0px;
+  }
+}
+.form__search-input {
+  flex: 1;
+  height: 100%;
+  background-color: transparent;
+}
+@media (max-width: 575.98px) {
+  .form__search-input {
+    padding-left: 10px;
+  }
+}
+@media (max-width: 575.98px) {
+  .form__search {
+    flex-direction: row-reverse;
+    border: 1px solid #d2d1d6;
+    margin: 10px 20px 0;
+    border-radius: 10px;
+  }
+}
+.form__option-list {
+  flex: 1;
+  overflow-y: auto;
+  margin-top: 10px;
+  overscroll-behavior: contain;
+}
+.form__option {
+  padding: 8px 20px;
+  font-size: 1.4rem;
+}
+@media (max-width: 991.98px) {
+  .form__option {
+    padding: 14px 20px;
+  }
+}
+.form__option:not(.form__option--current):hover {
+  background-color: var(--form-option-hover-bg);
+  cursor: pointer;
+}
+.form__option--current {
+  background-color: rgba(255, 183, 0, 0.3);
+  font-weight: 500;
+}
+.form__dialog-heading {
+  font-size: 2rem;
+  text-align: center;
+  font-weight: 500;
+  padding: 10px 0;
+}
+.form__holder {
+  position: absolute;
+  color: #9e9da8;
+  font-size: 1.9rem;
+  font-weight: 500;
+  line-height: 1.46;
+  transition-property: translate color;
+  transition-duration: 0.3s;
+  top: 50%;
+  translate: 0 -50%;
+  pointer-events: none;
+}
+.form-card__bottom {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.account-info_task {
+  position: relative;
+}
+.account-info_task:hover .list_task {
+  display: block;
+}
+
+.list_task {
+  display: none;
+  text-align: center;
+  position: absolute;
+  top: 50px;
+  left: -18px;
+  width: 80px;
+  background-color: rgb(53, 53, 53);
+  border-radius: 12px;
+}
+
+.list_task::before {
+  position: absolute;
+  content: "";
+  width: 80px;
+  height: 40px;
+  top: -40px;
+  left: 0px;
+}
+
+.list_task li {
+  line-height: 3rem;
+  font-weight: 800;
+  font-size: 2rem;
+  color: #fff;
+}
+
+.list_task li:hover {
+  color: #ffb700;
 }
 
 /*# sourceMappingURL=main.css.map */
