--- a/src/resources/scss/pages/_write_article_writter.scss
+++ b/src/resources/scss/pages/_write_article_writter.scss
@@ -35,7 +35,7 @@ label {
 .form-control,
 .form-control-file,
 .form-control select {
-  padding: 10px;
+  // padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 1.6rem;
