--- a/src/resources/views/auth/authActive.hbs
+++ b/src/resources/views/auth/authActive.hbs
@@ -5,7 +5,7 @@
         <form action="/auth/registed" method="POST">
           <h1>Create Account</h1>
           <div class="social-icons">
-            <a href="#" class="icon"><i
+            <a href="/auth/google" class="icon"><i
                 class="fa-brands fa-google-plus-g"
               ></i></a>
             <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
@@ -25,7 +25,7 @@
         <form action="/auth/login_check" method="POST">
           <h1>Sign In</h1>
           <div class="social-icons">
-            <a href="#" class="icon"><i
+            <a href="/auth/google" class="icon"><i
                 class="fa-brands fa-google-plus-g"
               ></i></a>
             <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
@@ -37,7 +37,7 @@
           <span>or use your email password</span>
           <input type="email" placeholder="Email" name="email" />
           <input type="password" placeholder="Password" name="password" />
-          <a href="#">Forget Your Password?</a>
+          <a href="/auth/reset_password">Forget Your Password?</a>
           <button type="submit">Sign In</button>
         </form>
       </div>
