--- a/src/resources/views/errors/404.hbs
+++ b/src/resources/views/errors/404.hbs
@@ -34,7 +34,7 @@
         <h1 class="error-code">404</h1>
         <h2 class="error-message">Page Not Found</h2>
         <p class="error-description">Sorry, the page you are looking for does not exist.</p>
-        <a href="/" class="error-link">Return to Home</a>
+        <a href="/logined" class="error-link">Return to Home</a>
     </div>
 </body>
 </html>
