--- a/src/resources/views/errors/500.hbs
+++ b/src/resources/views/errors/500.hbs
@@ -34,7 +34,7 @@
         <h1 class="error-code">500</h1>
         <h2 class="error-message">Server Error</h2>
         <p class="error-description">An error occurred on the server. Please try again later.</p>
-        <a href="/" class="error-link">Return to Home</a>
+        <a href="/logined" class="error-link">Return to Home</a>
     </div>
 </body>
 </html>
