--- a/src/resources/views/guest/index.hbs
+++ b/src/resources/views/guest/index.hbs
@@ -88,13 +88,14 @@
             <div class="branch"><h1>RISES</h1></div>
           </div>
           <div class="typewriter mt-5">
-            <h1 id="typewriter-text">RISES - Real-life, Innovation, Society, Entertainment, Sentiment.</h1>
+            <h1 id="typewriter-text">RISES - Real-life, Innovation, Society,
+              Entertainment, Sentiment.</h1>
           </div>
           <div class="authHeader col-12 p-0 mt-5">
             <div class="branch"><h1>e-newspaper</h1></div>
           </div>
         </div>
-        
+
       </div>
     </div>
     <div class="col-lg-12 col-md-12 col-xs-12 col-6">
@@ -113,18 +114,31 @@
                 />
               </a>
               <div class="card-body">
-                <a href="/articleDetail/{{this._id}}"><h5 class="card-title">{{this.title}}</h5></a>
+                <a href="/articleDetail/{{this._id}}"><h5
+                    class="card-title"
+                  >{{this.title}}</h5></a>
+                <br />
                 <p class="card-text"><strong>Categories:</strong>
                   {{this.category_id.name}}</p>
+                <br />
                 <p class="card-text"><strong>Date of Publication:</strong>
                   {{this.created_at}}</p>
-                <div class="d-flex align-items-center">
-                  <img
-                    src="https://th.bing.com/th/id/OIP.GeISNKc1rg7SZlcK7GZ7aQHaEK?w=292&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7"
-                    class="rounded-circle mr-2"
-                    alt="Profile Picture"
-                  />
-                  <p class="mb-0">Author Name</p>
+                <br />
+                <div class="d-flex align-items-center justify-content-between">
+                  <div
+                    class="author d-flex flex-nowrap align-items-center justify-content-between"
+                  >
+                    <img
+                      src="{{this.author_id.image}}"
+                      class="rounded-circle mr-2"
+                      alt="Profile Picture"
+                    />
+                    <p class="mb-0"><strong>{{this.author_id.username}}</strong></p>
+                  </div>
+                  <div class="type_article text-center">
+                    <p class="card-text"><strong>Type: </strong>
+                      {{this.type}}</p>
+                  </div>
                 </div>
               </div>
             </div>
