--- a/src/resources/views/partials/header_logined.hbs
+++ b/src/resources/views/partials/header_logined.hbs
@@ -21,16 +21,26 @@
                 </div>
                 <div class="col-xl-1 col-lg-2 col-sm-6 d-flex justify-content-center mt-3">
                             <div class="logo">
-                                <img src="/assets/img/logo/rises.png" alt="" class="logo__img">
+                                <a href="/logined"><img src="/assets/img/logo/rises.png" alt="" class="logo__img"></a>
                             </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-sm-12">
-                        <div class="search">
-                        <form class="form__header">
-                                <input class="search__input" type="text" name="" id="" placeholder="Search">
-                        </form>        
-                        <img src="/assets/icons/search.svg" class="search__icon"></img>
-                        </div>
+               <div class="col-xl-4 col-lg-6 col-sm-12">
+                    <div class="search">
+                        <form class="form__header" action="/search" method="get" id="searchForm">
+                        <input
+                            class="search__input"
+                            type="text"
+                            name="q"
+                            placeholder="Search"
+                        />
+                        </form>
+                        <img
+                        src="/assets/icons/search.svg"
+                        class="search__icon"
+                        alt="Search Icon"
+                        onclick="submitSearchForm()"
+                        />
+                    </div>
                 </div>
                 <div class="col-xl-3 col-lg-12 col-sm-12 d-flex justify-content-center mt-3">
                         <div class="social">
@@ -53,7 +63,7 @@
                 </div>
                 <div class="col-xl-2 col-lg-12 col-sm-12 d-flex justify-content-center mt-3">
                         <div  class="top-act__user">
-       <a href="/profile"> <img src="https://th.bing.com/th/id/OIP.oGVAyEw1QkSpZFB0KnAbbwHaEy?rs=1&pid=ImgDetMain" alt="" class="avatar" /></a>
+       <a href="/profile"> <img src="{{profile.image}}" alt="" class="avatar" /></a>
         <div class="act-dropdown top-act__dropdown">
           <div class="act-dropdown__arrow icon top-act__dropdown-arrow">
             <img src="/assets/icons/arrow-up.png" alt="" class="act-dropdown__arrow-img">
@@ -61,14 +71,10 @@
           <div class="act-dropdown__inner top-act__dropdown-inner">
            <div class="user-menu">
            <a href="/profile">
-              <div class="user-menu__top">
-                <img src="https://th.bing.com/th/id/OIP.oGVAyEw1QkSpZFB0KnAbbwHaEy?rs=1&pid=ImgDetMain" alt="" class="avatar">
+             <div class="user-menu__top">
+                <img src="{{profile.image}}" alt="" class="avatar">
                <div>
-              {{#if profile.name}}
-                <p class="user-menu__name">{{profile.name}}</p>
-              {{else}}
-                <p class="user-menu__name">{{profile.name}}</p>
-              {{/if}}
+                <p class="user-menu__name">{{profile.username}}</p>
                </div>
               </div>
            </a>
@@ -94,7 +100,7 @@
                   Premium</a>
               </li>
               <li class="user-menu__separate">
-                <a href="/sign-in" class="user-menu__link">
+                <a href="/auth/logout" class="user-menu__link">
                   <img src="/assets/icon/logout.svg" alt="" class="icon user-menu__icon">
                   
                   Logout</a>
