--- a/src/resources/scss/pages/_guest_index.scss
+++ b/src/resources/scss/pages/_guest_index.scss
@@ -23,7 +23,7 @@
   overflow-y: auto;
 }
 .card-img {
-  width: 50%;
-  height: calc(width/2);
+  width: 150px;
+  height: 150px;
   padding: 10px;
 }
