--- a/src/resources/scss/pages/_detail_page.scss
+++ b/src/resources/scss/pages/_detail_page.scss
@@ -1,7 +1,7 @@
 .article-container {
   font-family: "Arial", sans-serif;
   line-height: 1.6;
-  margin: 20px auto;
+  margin: 0;
   padding: 20px;
   border: 1px solid #ddd;
   background-color: #fff;
