--- a/src/resources/views/layouts/auth.hbs
+++ b/src/resources/views/layouts/auth.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Rises | User Actions </title>
+    <title> Rises | Real-life, Innovation, Society, Entertainment, Sentiment </title>
     <!-- Favicon -->
     <link
       rel="icon"
@@ -25,6 +25,7 @@
     <!--Icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- Css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/main.css" />
   </head>
   <body>
