--- a/src/resources/views/partials/header_guest_subscriber.hbs
+++ b/src/resources/views/partials/header_guest_subscriber.hbs
@@ -25,9 +25,9 @@
                             </div>
                 </div>
                 <div class="col-xl-4 col-lg-6 col-sm-12">
-                        <div class="search">
-                        <form class="form__header">
-                                <input class="search__input" type="text" name="" id="" placeholder="Search">
+                        <div class="search" >
+                        <form class="form__header" action="/search" method="get" id="searchForm">
+                                <input class="search__input" type="text" name="q" id="" placeholder="Search">
                         </form>        
                         <img src="/assets/icons/search.svg" class="search__icon"></img>
                         </div>
