--- a/src/resources/views/partials/header_guest_subscriber.hbs
+++ b/src/resources/views/partials/header_guest_subscriber.hbs
@@ -61,7 +61,7 @@
         </div>
         <nav class="nav-header">
                 <div class="nav-header__home">
-                    <a href="" class="">
+                    <a href="/" class="">
                     <img src="/assets/icons/home.svg" alt="" class="nav-header__home--img">
                     </a>
                 </div>
