--- a/src/resources/views/administrator/extend_subscription.hbs
+++ b/src/resources/views/administrator/extend_subscription.hbs
@@ -31,26 +31,163 @@
         </ul>
       </div>
       <div class="col-9">
-        <h1 class="admin__heading">Extend Subscription</h1>
-        <h1>Extend Subscription</h1>
+        <h1 class="admin__heading"> Manage Tag</h1>
+        <div class="action_btn">
+          <div class="back-btn-container">
+            <a href="/logined" class="btn btn-back">Back</a>
+          </div>
+          <div class="add-btn-container">
+            <a href="/admin/manage-add-extend-subscription" class="btn btn-add">Add Plan</a>
+          </div>
+        </div>
         <table class="admin__table">
           <thead>
             <tr>
-              <th>Package</th>
-              <th>Price</th>
-              <th>Duration</th>
+              <th>ID
+                <button
+                  class="sort-btn"
+                  data-sort="id"
+                  data-order="asc"
+                >▲</button>
+                <button
+                  class="sort-btn"
+                  data-sort="id"
+                  data-order="desc"
+                >▼</button>
+              </th>
+              <th>Name
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="asc"
+                >▲</button>
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="desc"
+                >▼</button>
+              </th>
+              <th>Original Price
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="asc"
+                >▲</button>
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="desc"
+                >▼</button>
+              </th>
+              <th>Discounted Price
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="asc"
+                >▲</button>
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="desc"
+                >▼</button>
+              </th>
+              <th>Daily Cost
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="asc"
+                >▲</button>
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="desc"
+                >▼</button>
+              </th>
+              <th>Discount Percent
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="asc"
+                >▲</button>
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="desc"
+                >▼</button>
+              </th>
               <th>Actions</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>Basic</td>
-              <td>$5</td>
-              <td>1 Month</td>
-              <td><button>Extend</button></td>
-            </tr>
+            {{#if plans}}
+            {{#each plans}}
+              <tr>
+                <td>{{increment @index}}</td>
+                <td>{{this.name}}</td>
+                <td>{{this.originalPrice}}</td>
+                <td>{{this.discountedPrice}}</td>
+                <td>{{this.dailyCost}}</td>
+                <td>{{this.discountPercent}}</td>
+                <td>
+                  <a
+                    href="/admin/{{this._id}}/manage-Update-extend-subscription"
+                    class="btn btn-add"
+                  >Edit</a>
+                  <a
+                    href="#"
+                    class="btn btn-danger btn-add"
+                    data-toggle="modal"
+                    data-target="#deleteModal"
+                    data-id="{{this._id}}"
+                  >Delete</a>
+                </td>
+              </tr>
+            {{/each}}
+            {{else}}
+            <tr><td colspan="7" style="text-align: center;">Empty</td></tr>
+            {{/if}}
           </tbody>
         </table>
+      </div>
+    </div>
+  </div>
+</div>
+<div
+  class="modal fade"
+  id="deleteModal"
+  hidden
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="deleteModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-delete__admin" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this Plan?
+      </div>
+      <div class="modal-footer">
+        <button
+          type="button"
+          class="btn btn-secondary"
+          data-dismiss="modal"
+        >Cancel</button>
+        <button
+          type="button"
+          class="btn btn-danger"
+          id="confirmDeleteBtn"
+        >Delete</button>
       </div>
     </div>
   </div>
