--- a/src/resources/views/administrator/manage_articles.hbs
+++ b/src/resources/views/administrator/manage_articles.hbs
@@ -34,29 +34,141 @@
         <h1 class="admin__heading"> Manage Articles</h1>
         <h1>Manage Articles</h1>
         <input type="text" placeholder="Search articles..." id="search" />
+        <div
+          class="add-btn-container"
+          style="display: flex; justify-content : flex-end"
+        >
+          <a href="/admin/manage-add-article" class="btn btn-add">Add Article</a>
+        </div>
         <table class="admin__table">
           <thead>
             <tr>
-              <th>ID</th>
-              <th>Title</th>
-              <th>Author</th>
-              <th>Category</th>
+              <th>ID
+                <button
+                  class="sort-btn"
+                  data-sort="id"
+                  data-order="asc"
+                >▲</button>
+                <button
+                  class="sort-btn"
+                  data-sort="id"
+                  data-order="desc"
+                >▼</button>
+              </th>
+              <th>Title
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="asc"
+                >▲</button>
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="desc"
+                >▼</button>
+              </th>
+              <th>Author
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="asc"
+                >▲</button>
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="desc"
+                >▼</button>
+              </th>
+              <th>Category
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="asc"
+                >▲</button>
+                <button
+                  class="sort-btn"
+                  data-sort="name"
+                  data-order="desc"
+                >▼</button>
+              </th>
+              <th>Status</th>
               <th>Actions</th>
             </tr>
           </thead>
           <tbody id="articleList">
-            <tr>
-              <td>1</td>
-              <td>How to Learn JavaScript</td>
-              <td>Admin</td>
-              <td>Programming</td>
-              <td>
-                <button>Edit</button>
-                <button>Delete</button>
-              </td>
-            </tr>
+            {{#each articles}}
+              <tr>
+                <td>{{increment @index}}</td>
+                <td>{{this.title}}</td>
+                <td style="display: flex; align-item : center ; gap:10px">
+                  <img src="{{this.author_id.image}}" class="avatar" alt="" />
+                  <span
+                    style="font-size: 2rem ; line-height: 2; display:block"
+                  >{{this.author_id.username}}</span></td>
+                <td>{{this.category_id.name}}</td>
+                <td>{{this.status}}</td>
+                <td>
+                  <a
+                    href="/admin/{{this._id}}/manage-detail-article"
+                    class="btn btn-add"
+                    style="background-color: orange;"
+                  >Detail</a>
+                  <a
+                    href="/admin/{{this._id}}/manage-edit-article"
+                    class="btn btn-add"
+                  >Edit</a>
+                  <a
+                    href="#"
+                    class="btn btn-danger btn-add"
+                    data-toggle="modal"
+                    data-target="#deleteModal"
+                    data-id="{{this._id}}"
+                  >Delete</a>
+                </td>
+              </tr>
+            {{/each}}
           </tbody>
         </table>
+      </div>
+    </div>
+  </div>
+</div>
+<div
+  class="modal fade"
+  id="deleteModal"
+  hidden
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="deleteModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-delete__admin" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this Article?
+      </div>
+      <div class="modal-footer">
+        <button
+          type="button"
+          class="btn btn-secondary"
+          data-dismiss="modal"
+        >Cancel</button>
+        <button
+          type="button"
+          class="btn btn-danger"
+          id="confirmDeleteBtn"
+        >Delete</button>
       </div>
     </div>
   </div>
