add data articles,...

--- a/src/resources/views/guest/index.hbs
+++ b/src/resources/views/guest/index.hbs
@@ -122,7 +122,7 @@
                   {{this.category_id.name}}</p>
                 <br />
                 <p class="card-text"><strong>Date of Publication:</strong>
-                  {{this.created_at}}</p>
+                  {{this.Release_at}}</p>
                 <br />
                 <div class="d-flex align-items-center justify-content-between">
                   <div
