--- a/src/resources/views/layouts/admin.hbs
+++ b/src/resources/views/layouts/admin.hbs
@@ -42,6 +42,7 @@
     <script src="/assets/js/writer.js"></script>
     <script src="/assets/js/deleteModal.js"></script>
     <script src="/assets/js/deleteTag.js"></script>
+    <script src="/assets/js/deletePlan.js"></script>
 
     {{!-- ========================== --}}
     {{!-- WYSIWYG(tinymce) --}}
