--- a/src/resources/views/partials/header_guest_subscriber.hbs
+++ b/src/resources/views/partials/header_guest_subscriber.hbs
@@ -212,7 +212,7 @@
                     <button class="nav-control nav-next">></button>          
                 </div>
                 <div class="nav-header__contact-us">
-                    <a href="" class="">
+                    <a href="/contact_us" class="">
                         <img src="/assets/icons/contact.svg" alt="" class="nav-header__contact-us-img">
                     </a>
                 </div>
