--- a/src/resources/views/administrator/manage_update_plan.hbs
+++ b/src/resources/views/administrator/manage_update_plan.hbs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,25 +9,20 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css"
     />
     <style>
-      /* Custom styles for input fields */
-      input.form-control,
-      textarea.form-control {
-        height: 50px; /* Increase height */
-        padding: 10px 15px; /* Add padding */
-        font-size: 16px; /* Make text larger */
-      }
-      textarea.form-control {
-        height: auto; /* Allow textarea to resize */
-      }
-      .container {
-        max-width: 600px; /* Limit form width */
-      }
+      /* Custom styles for input fields */ input.form-control,
+      textarea.form-control { height: 50px; /* Increase height */ padding: 10px
+      15px; /* Add padding */ font-size: 16px; /* Make text larger */ }
+      textarea.form-control { height: auto; /* Allow textarea to resize */ }
+      .container { max-width: 600px; /* Limit form width */ }
     </style>
   </head>
   <body>
     <div class="container mt-5 mb-5">
       <h1 class="text-center mb-4">Subscription Plan Form</h1>
-      <form action="/admin/{{plan._id}}/manage-UpdateSave-extend-subscription?_method=PUT" method="POST">
+      <form
+        action="/admin/{{plan._id}}/manage-UpdateSave-extend-subscription?_method=PUT"
+        method="POST"
+      >
         <div class="form-group">
           <label for="name">Plan Name</label>
           <input
@@ -108,13 +102,16 @@
             class="form-control"
             id="description"
             name="description"
-            value="{{plan.description}}"
             placeholder="Enter a brief description (optional)"
-          ></textarea>
+          >{{plan.description}}</textarea>
         </div>
         <!-- Submit Button -->
-        <button type="submit" class="btn btn-primary btn-block" style="height: 40px">
-          <strong >Submit Plan</strong>
+        <button
+          type="submit"
+          class="btn btn-primary btn-block"
+          style="height: 40px"
+        >
+          <strong>Submit Plan</strong>
         </button>
       </form>
     </div>
