--- a/src/resources/views/editor/editor_dashboard.hbs
+++ b/src/resources/views/editor/editor_dashboard.hbs
@@ -115,60 +115,66 @@
   aria-labelledby="approveModalLabel"
   aria-hidden="true"
 >
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="approveModalLabel">Approve Article</h5>
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="approveModalLabel">Approve Article</h5>
+      <button
+        type="button"
+        class="close"
+        data-dismiss="modal"
+        aria-label="Close"
+      >
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <form id="approveForm" method="POST" action="">
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="category">Category</label>
+          <select class="form-control" id="category" name="category">
+            <option value="">Select category</option>
+            {{#each category}}
+              <option value="{{this._id}}">{{this.name}}</option>
+            {{/each}}
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="tags">Tags</label>
+          <input
+            type="text"
+            class="form-control"
+            id="tags"
+            name="tags"
+            placeholder="Enter tags, separated by commas"
+          />
+        </div>
+        <div class="form-group">
+          <label for="publishDate">Publish Date</label>
+          <input
+            type="datetime-local"
+            class="form-control"
+            id="publishDate"
+            name="publishDate"
+          />
+        </div>
+        <div class="form-group">
+          <label for="type">Type</label>
+          <select class="form-control" id="type" name="type">
+            <option value="none">None</option>
+            <option value="pre">Pre</option>
+          </select>
+        </div>
+      </div>
+      <div class="modal-footer">
         <button
           type="button"
-          class="close"
+          class="btn btn-secondary"
           data-dismiss="modal"
-          aria-label="Close"
-        >
-          <span aria-hidden="true">&times;</span>
-        </button>
+        >Close</button>
+        <button type="submit" class="btn btn-primary">Approve</button>
       </div>
-      <form id="approveForm" method="POST" action="">
-        <div class="modal-body">
-          <div class="form-group">
-            <label for="category">Category</label>
-            <select class="form-control" id="category" name="category">
-              <option value="">Select category</option>
-              {{#each category}}
-                <option value="{{this._id}}">{{this.name}}</option>
-              {{/each}}
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="tags">Tags</label>
-            <input
-              type="text"
-              class="form-control"
-              id="tags"
-              name="tags"
-              placeholder="Enter tags, separated by commas"
-            />
-          </div>
-          <div class="form-group">
-            <label for="publishDate">Publish Date</label>
-            <input
-              type="datetime-local"
-              class="form-control"
-              id="publishDate"
-              name="publishDate"
-            />
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button
-            type="button"
-            class="btn btn-secondary"
-            data-dismiss="modal"
-          >Close</button>
-          <button type="submit" class="btn btn-primary">Approve</button>
-        </div>
-      </form>
-    </div>
+    </form>
   </div>
 </div>
 
