--- a/src/resources/views/partials/header_auth.hbs
+++ b/src/resources/views/partials/header_auth.hbs
@@ -1,5 +1,5 @@
 <div class="authHeader">
   <div class="container">
-    <div class="branch"><h1>RISES</h1></div>
+    <div class="branch"><a href="/"><h1>RISES</h1></a></div>
   </div>
 </div>
