--- a/src/resources/views/writer/view_article.hbs
+++ b/src/resources/views/writer/view_article.hbs
@@ -1,14 +1,14 @@
-<div class="container mt-3 mb-3">
+<div class="container mt-5 mb-5">
   <div class="row">
     <div class="col-12">
       <div class="article-container">
         <h1 class="article-header">{{article.title}}</h1>
 
         <div class="article-metadata">
-          <span class="article-author">Author: Nguyễn Văn A</span>
+          <span class="article-author">Author: {{article.author_id.username}}</span>
           |
-          <span class="article-date">Published on:
-            {{article.created_at}}</span>
+          <span class="article-date">Created At:
+            {{article.createdAt}}</span>
         </div>
 
         <div class="article-summary">
